--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,9 @@
 ---
 import { Mail, Phone } from "lucide-astro";
+import { getEntry } from "astro:content";
+
+const footer = await getEntry("sections", "footer");
+const { data } = footer!;
 ---
 
 <footer class="bg-black text-white py-16 px-4 md:px-8 border-t border-gray-900">
@@ -10,28 +14,29 @@ import { Mail, Phone } from "lucide-astro";
             <h2
                 class="text-5xl md:text-7xl font-black mb-8 flex items-end gap-2"
             >
-                CONTACT US<span class="text-neon-lime text-2xl mb-4">●</span>
+                {data.title}<span class="text-neon-lime text-2xl mb-4">●</span>
             </h2>
 
             <div class="space-y-4">
-                <div
-                    class="flex items-center gap-4 text-lg md:text-xl text-gray-400 hover:text-white transition-colors"
-                >
-                    <Mail class="text-neon-lime" />
-                    <span>chiuchiuentertainment@gmail.com</span>
-                </div>
-                <div
-                    class="flex items-center gap-4 text-lg md:text-xl text-gray-400 hover:text-white transition-colors"
-                >
-                    <Phone class="text-neon-lime" />
-                    <span>091 685 5268</span>
-                </div>
+                {
+                    data.contacts?.map((contact) => (
+                        <div class="flex items-center gap-4 text-lg md:text-xl text-gray-400 hover:text-white transition-colors">
+                            {contact.icon === "Mail" && (
+                                <Mail class="text-neon-lime" />
+                            )}
+                            {contact.icon === "Phone" && (
+                                <Phone class="text-neon-lime" />
+                            )}
+                            <span>{contact.value}</span>
+                        </div>
+                    ))
+                }
             </div>
         </div>
 
         <div class="text-right">
             <p class="text-gray-500 text-sm">
-                ©All rights reserved by <br /> ChiuChiu Entertainment
+                {data.extraData?.copyright}
             </p>
         </div>
     </div>
