--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,9 @@
 ---
 import { ArrowUpRight } from "lucide-astro";
+import { getEntry } from "astro:content";
+
+const hero = await getEntry("sections", "hero");
+const { data } = hero!;
 ---
 
 <section
@@ -12,20 +16,24 @@ import { ArrowUpRight } from "lucide-astro";
     </div>
 
     <div class="mt-12 md:mt-20">
-        <p class="font-bold text-lg md:text-2xl mb-2">Top 1 Movie network</p>
-        <p class="font-bold text-lg md:text-2xl">TikTok Vietnam</p>
+        <p class="font-bold text-lg md:text-2xl mb-2">
+            {data.extraData?.topText1}
+        </p>
+        <p class="font-bold text-lg md:text-2xl">{data.extraData?.topText2}</p>
     </div>
 
     <div class="flex flex-col items-center justify-center my-8">
         <h1
             class="text-5xl md:text-[150px] font-black tracking-tighter leading-none"
         >
-            #leuheu
+            {data.title}
         </h1>
         <p class="text-xl md:text-3xl font-medium mt-2">
-            ChiuChiu Entertainment
+            {data.subtitle}
         </p>
-        <p class="text-lg md:text-xl font-light">Company</p>
+        <p class="text-lg md:text-xl font-light">
+            {data.extraData?.bottomText}
+        </p>
     </div>
 
     <div class="flex flex-wrap gap-4 mt-8">
@@ -33,12 +41,12 @@ import { ArrowUpRight } from "lucide-astro";
             class="border-2 border-black rounded-full px-6 py-2 font-bold flex items-center gap-2"
         >
             <span class="bg-black text-white p-1 rounded-sm text-xs"
-                >TikTok</span
+                >{data.badge}</span
             >
-            <span>TikTok</span>
+            <span>{data.badge}</span>
         </div>
         <div class="border-2 border-black rounded-full px-6 py-2 font-bold">
-            #leuheu
+            {data.title}
         </div>
     </div>
 </section>
