add splash screen

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -14,7 +14,7 @@ const servicesWithContent = await Promise.all(
 );
 ---
 
-<section class="bg-white text-black py-16 px-4 md:px-8">
+<section class="text-black py-16 px-4 md:px-8">
     <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         {
             servicesWithContent.map((service) => (
