--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import CampaignCard from "../components/CampaignCard.astro";
 import Partners from "../components/Partners.astro";
 import Footer from "../components/Footer.astro";
 import { Star } from "lucide-astro";
+import SplashScreen from "../components/SplashScreen.astro";
 
 const campaigns = await getCollection("campaigns");
 const sortedCampaigns = campaigns.sort(
@@ -46,6 +47,9 @@ const sortedCampaigns = campaigns.sort(
         </style>
     </head>
     <body class="font-sans overflow-x-hidden">
+        {/* Splash Screen */}
+        <SplashScreen />
+
         <div class="spotlight relative min-h-screen">
             <Hero />
 
@@ -123,7 +127,7 @@ const sortedCampaigns = campaigns.sort(
             </section>
 
             <div
-                class="absolute top-[25svh] left-1/2 -translate-x-1/2 w-[100%] h-full -z-10 pointer-events-none"
+                class="absolute top-[0] left-1/2 -translate-x-1/2 w-[100%] h-full -z-10 pointer-events-none"
             >
                 <svg
                     class="w-full h-auto"
