--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -22,7 +22,8 @@ const { Content } = await render(about!);
             <div
                 class="text-lg md:text-xl leading-relaxed text-gray-300 space-y-4"
             >
-                <Content />
+                <p>{data.extraData?.introduction}</p>
+                <p>{data.extraData?.introduction2}</p>
             </div>
         </div>
 
