--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const footer = await getEntry("sections", "footer");
 const { data } = footer!;
 ---
 
-<footer class="bg-black text-white py-16 px-4 md:px-8 border-t border-gray-900">
+<footer class="text-white py-16 px-4 md:px-8 border-t border-gray-900">
     <div
         class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-end gap-12"
     >
