--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -14,9 +14,7 @@ const creators = Array(12)
     }));
 ---
 
-<section
-    class="text-white py-16 px-4 md:px-8 relative bg-black border-y border-gray-900"
->
+<section class="text-white py-16 px-4 md:px-8 relative">
     <div class="max-w-6xl mx-auto">
         <h2 class="text-4xl md:text-6xl font-black mb-12 uppercase">
             {data.title}
