--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,26 +6,28 @@ const footer = await getEntry("sections", "footer");
 const { data } = footer!;
 ---
 
-<footer class="text-white py-16 px-4 md:px-8 border-t border-gray-900">
+<footer
+    class="text-white py-12 xs:py-16 3xl:py-24 px-4 md:px-8 3xl:px-16 border-t border-gray-900"
+>
     <div
-        class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-end gap-12"
+        class="max-w-7xl 3xl:max-w-9xl mx-auto flex flex-col md:flex-row justify-between items-start md:items-end gap-12"
     >
         <div>
             <h2
-                class="text-5xl md:text-7xl font-black mb-8 flex items-end gap-2"
+                class="text-4xl xs:text-5xl md:text-7xl 3xl:text-9xl font-black mb-8 3xl:mb-12 flex items-end gap-2"
             >
                 {data.title}<span class="text-neon-lime text-2xl mb-4">●</span>
             </h2>
 
-            <div class="space-y-4">
+            <div class="space-y-4 3xl:space-y-6">
                 {
                     data.contacts?.map((contact) => (
-                        <div class="flex items-center gap-4 text-lg md:text-xl text-gray-400 hover:text-white transition-colors">
+                        <div class="flex items-center gap-3 xs:gap-4 text-base xs:text-lg md:text-xl 3xl:text-3xl text-gray-400 hover:text-white transition-colors">
                             {contact.icon === "Mail" && (
-                                <Mail class="text-neon-lime" />
+                                <Mail class="text-neon-lime w-5 h-5 xs:w-6 xs:h-6 3xl:w-10 3xl:h-10" />
                             )}
                             {contact.icon === "Phone" && (
-                                <Phone class="text-neon-lime" />
+                                <Phone class="text-neon-lime w-5 h-5 xs:w-6 xs:h-6 3xl:w-10 3xl:h-10" />
                             )}
                             <span>{contact.value}</span>
                         </div>
@@ -34,8 +36,8 @@ const { data } = footer!;
             </div>
         </div>
 
-        <div class="text-right">
-            <p class="text-gray-500 text-sm">
+        <div class="text-left md:text-right w-full md:w-auto">
+            <p class="text-gray-500 text-xs xs:text-sm 3xl:text-xl">
                 {data.extraData?.copyright}
             </p>
         </div>
