--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -8,29 +8,51 @@ interface Props {
 const { text, className = "", reverse = false } = Astro.props;
 ---
 
-<div class={`overflow-hidden whitespace-nowrap py-3 md:py-5 flex ${className}`}>
+<div
+    class={`overflow-hidden whitespace-nowrap py-2 xs:py-3 md:py-5 3xl:py-8 flex ${className}`}
+>
     <div
         class={`flex ${reverse ? "animate-marquee-reverse" : "animate-marquee"}`}
     >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
-        <span class="text-xl md:text-3xl font-black uppercase mx-4">{text}</span
+        <span
+            class="text-lg xs:text-xl md:text-3xl lg:text-4xl 3xl:text-6xl font-black uppercase mx-2 xs:mx-4 3xl:mx-8"
+            >{text}</span
         >
     </div>
 </div>
