--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -14,22 +14,24 @@ const servicesWithContent = await Promise.all(
 );
 ---
 
-<section class="text-black py-16 px-4 md:px-8">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+<section class="text-black py-12 xs:py-16 3xl:py-24 px-4 md:px-8 3xl:px-16">
+    <div
+        class="max-w-7xl 3xl:max-w-[100rem] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 xs:gap-12 3xl:gap-16"
+    >
         {
             servicesWithContent.map((service) => (
-                <div class="flex flex-col gap-4">
-                    <div class="overflow-hidden rounded-2xl">
+                <div class="flex flex-col gap-3 xs:gap-4 3xl:gap-8">
+                    <div class="overflow-hidden rounded-2xl 3xl:rounded-[2rem]">
                         <img
                             src={service.data.image}
                             alt={service.data.title}
-                            class="w-full h-64 object-cover hover:scale-105 transition-transform duration-500"
+                            class="w-full h-56 xs:h-64 3xl:h-96 object-cover hover:scale-105 transition-transform duration-500"
                         />
                     </div>
-                    <h3 class="text-2xl font-black uppercase mt-4">
+                    <h3 class="text-xl xs:text-2xl 3xl:text-4xl font-black uppercase mt-2 xs:mt-4 3xl:mt-6">
                         {service.data.title}
                     </h3>
-                    <div class="text-gray-600 font-medium">
+                    <div class="text-gray-600 font-medium text-sm xs:text-base 3xl:text-xl">
                         <service.Content />
                     </div>
                 </div>
